No scrolling before button slides up, fancy button animations

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,15 +6,21 @@ layout: default
 
   <div class="masthead">
     {% include big-d.svg %}
+
     <h1>Darwin Campa</h1>
+
     <p>
       UX, UI &amp; Visual Design 
-      <br />
+      <br>
       Front-end Development
     </p>
   </div>
+
   <div class="contact-action">
-    <a class="linkedin button" href="http://www.linkedin.com/in/darwincampa">Connect on LinkedIn</a>
+    <div class="button-wrapper">
+      <a class="linkedin button" href="http://www.linkedin.com/in/darwincampa">Connect on LinkedIn</a>
+    </div>
+
     <p class="footnote">(Portfolio coming soon)</p>
   </div>
 
